--- a/gerenc/src/main/webapp/WEB-INF/web.xml
+++ b/gerenc/src/main/webapp/WEB-INF/web.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
-  <display-name>manager</display-name>
+  <display-name>gerenc</display-name>
   <welcome-file-list>
     <welcome-file>bem-vindo.html</welcome-file>
   </welcome-file-list>
-  
   <servlet>
-  <servlet-name>QQcoisa</servlet-name>
-  	<servlet-class>main.java.br.com.alura.manager.servlet.OiMundoServlet</servlet-class>
+    <servlet-name>QQcoisa</servlet-name>
+    <servlet-class>main.java.br.com.alura.gerenciador.servlet.OiMundoServlet</servlet-class>
   </servlet>
-  
   <servlet-mapping>
-  <servlet-name>QQcoisa</servlet-name>
-  	<url-pattern>/oi</url-pattern>
+    <servlet-name>QQcoisa</servlet-name>
+    <url-pattern>/oi</url-pattern>
   </servlet-mapping>
-  
-  
 </web-app>
